Agregada región en footer
En la sección *Main Footer* se agrega una nueva región llamada *Main
Footer Right* pasando la que tenía ese nombre a llamarse *Main Footer
Center*

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -131,6 +131,10 @@
                 </div>
 
                 <div class="col-lg-4 col-md-4 col-sm-4 animate-onscroll">
+                    {{ page.main_footer_center }}
+                </div>
+
+                <div class="col-lg-5 col-md-5 col-sm-5 animate-onscroll">
                     {{ page.main_footer_right }}
                 </div>
 
