Menú administración visible
Se agregan las variable  {{ page_top }} y {{ page_bottom }} para que se
visualice el menú de administración

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -34,7 +34,9 @@
     <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
 	<body class="boxed-layout">
+        {{ page_top }}
         {{ page }}
+        {{ page_bottom }}
         <js-bottom-placeholder token="{{ placeholder_token|raw }}">
       </div>
   </body>
